@@ -38,6 +38,7 @@ Release 0.91.0 - Unreleased
                row are the same
    HBASE-3416  For intra-row scanning, the update readers notification resets
                the query matcher and can lead to incorrect behavior
+   HBASE-3492  NPE while splitting table with empty column family store
 
 
   IMPROVEMENTS
